--- a/style.css
+++ b/style.css
@@ -8,4 +8,8 @@
 section {
     position: relative;
     width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
