--- a/style.css
+++ b/style.css
@@ -19,4 +19,6 @@ section .main {
     margin: 0 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
