--- a/style.css
+++ b/style.css
@@ -26,4 +26,9 @@ section .main {
 section .main .searchBx {
     position: relative;
     width: 100%;
+    margin-top: 20px;
+}
+
+section .main .searchBx .query {
+    width: 100%;
 }
