--- a/style.css
+++ b/style.css
@@ -37,3 +37,8 @@ section .main .searchBx .query {
   font-size: 16px;
   border-radius: 30px;
 }
+
+section .main .searchBx .icons {
+    position: absolute;
+    top: 0;
+} 
