--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ section .main .searchBx .query {
 }
 
 section .main .searchBx .icons {
-    position: absolute;
-    top: 0;
-} 
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 20px;
+}
