--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ section .main .searchBx .query {
   outline: none;
   font-size: 16px;
   border-radius: 30px;
+  padding-left: 45px;
+  padding-right: 60px;
 }
 
 section .main .searchBx .icons {
@@ -45,4 +47,6 @@ section .main .searchBx .icons {
   display: flex;
   justify-content: space-between;
   padding: 12px 20px;
+  align-items: center;
+  pointer-events: none;
 }
