--- a/style.css
+++ b/style.css
@@ -54,3 +54,8 @@ section .main .searchBx .icons {
 section .main .searchBx .icons img {
     max-width: 100%;
 }
+
+.searchBtn {
+    margin: 0 5px;
+    margin-top: 20px;
+}
