--- a/style.css
+++ b/style.css
@@ -60,4 +60,6 @@ section .main .searchBx .icons img {
     margin-top: 20px;
     padding: 12px 20px;
     color: #555;
+    font-size: 14px;
+    border: none;
 }
