--- a/style.css
+++ b/style.css
@@ -61,5 +61,7 @@ section .main .searchBx .icons img {
     padding: 12px 20px;
     color: #555;
     font-size: 14px;
-    border: none;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    border-radius: 4px;
 }
