--- a/style.css
+++ b/style.css
@@ -61,7 +61,12 @@ section .main .searchBx .icons img {
     padding: 12px 20px;
     color: #555;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid transparent;
     cursor: pointer;
     border-radius: 4px;
+    outline: none;
+}
+
+.searchBtn:hover {
+    border: 1px solid #ccc;
 }
